# ai-cloud-functions

./: .firebaserc  .gcloudignore  Makefile  README.md  firebase.json
.github/workflows/: deploy.yml  publish-pypi.yml
Agents/: ERROR_CHECKS.md  PROJECT_CONTEXT.md  WORKFLOW.md
functions/ai_insert_text_assistant_message/: env.dev.yaml  env.prod.yaml  function.json  main.py  requirements.txt
functions/ai_insert_text_assistant_message/utils/: ai_chat_utils.py
functions/ai_send_text_assistant_message/: .gcloudignore  env.dev.yaml  env.prod.yaml  function.json  main.py  requirements.txt
functions/ai_send_text_assistant_message/core/: constants.py
functions/ai_send_text_assistant_message/models/: ai_assistant_chat.py
functions/ai_send_text_assistant_message/py_functions/: main.py  requirements.txt
functions/ai_send_text_assistant_message/services/: __init__.py  ai_chat_service.py
functions/eleven_labs_backfill_conversation/: .gcloudignore  env.dev.yaml  env.prod.yaml  function.json  main.py  requirements.txt
functions/eleven_labs_backfill_conversation/config/: config.py
functions/eleven_labs_backfill_conversation/services/: agents_services.py
functions/eleven_labs_backfill_conversation/utils/: agents_name.py
functions/eleven_labs_post_call/: env.dev.yaml  function.json  main.py  requirements.txt
functions/user_info_lookup/: env.dev.yaml  env.prod.yaml  function.json  main.py  requirements.txt
libs/dingdoor-utils-package/: pyproject.toml
libs/dingdoor-utils-package/src/dingdoor_utils_package/: __init__.py  bq_utils.py
(+9 files in other folders)
